@@ -10,6 +10,7 @@
 
 
 Version 4.2.2
+ - Changed - Various core files in preparation for GEDFact_assistant module (windmillway)
  - Changed Move various media "thumbnails" to the "index/media" subdirectory (canajun2eh)
  - Fixed Text media items not being displayed properly with Lightbox. (windmillway) 
  - Fixed [ 2789308 ] ERROR 8: Constant PGV_GOOGLE_ANALYTICS already defined (fisharebest)
